[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Avocado_Idle0001.png" type="Texture" id=1]
[ext_resource path="res://Script/Frut.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 35.4693

[node name="RBFrut" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="SpriteInt" type="Sprite" parent="."]
rotation = -3.92136e-08
scale = Vector2( 0.19, 0.19 )

[node name="RBLeft" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0
mode = 1

[node name="SpriteLeft" type="Sprite" parent="RBLeft"]
position = Vector2( -22.4, 0 )
scale = Vector2( 0.19, 0.19 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 236, 501 )

[node name="CollisionLeft" type="CollisionShape2D" parent="RBLeft"]
shape = SubResource( 1 )

[node name="RBRight" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0
mode = 1

[node name="SpriteRight" type="Sprite" parent="RBRight"]
position = Vector2( 22.4, 0 )
scale = Vector2( 0.19, 0.19 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 236, 0, 236, 501 )

[node name="CollisionRight" type="CollisionShape2D" parent="RBRight"]
shape = SubResource( 1 )

[node name="CollisionFruts" type="CollisionShape2D" parent="."]
position = Vector2( 0.315591, 0.485118 )
rotation = 1.1973
shape = SubResource( 2 )
